# bluez5-alsa-player

./: .gitignore  CMakeLists.txt  LICENSE.md  README
src/: CMakeLists.txt  a2dp-codecs.h  a2dp-endpoint.c  a2dp-endpoint.h  adapter.c  adapter.h  agent.c  agent.h  bluez-interface.h  device.c  device.h  main.c  media-transport.c  media-transport.h  utils.h
